--- a/exetra/e2.css
+++ b/exetra/e2.css
@@ -94,6 +94,7 @@
 }
 #footer .in .box ul li {
     border-bottom: solid #bbbbbb 1px;
+    font-size: 14px;
 }
 #footer .in .box ul li:last-child {
     border-bottom: none;
@@ -103,7 +104,6 @@
     line-height: 40px;
     height: 40px;
     display: block;
-    font-size: 14px;
 }
 #footer .in .box ul li img {
     display: none;
@@ -227,10 +227,6 @@
 .fluid #content .content-in .rightcol .head {
 	font-size: 14px;
 }
-#content .content-in .content .rightcol {
-    /*width: 77.5% !important;?*/
-}
-
 #content .content-in .rightcol .purchase-item .desc,
 #content .content-in .rightcol .purchase-item table tr td,
 #content .content-in .rightcol .purchase-item table tr th {
@@ -265,7 +261,7 @@
     float: right;
     margin: 15px 20px 0 15px !important;
     padding: 0 !important;
-    width: auto/*15%*/;
+    width: auto;
 }
 .fluid #content .content-in .header .item label {
     vertical-align: middle;
@@ -278,9 +274,14 @@
     vertical-align: top;
     height: 34px !important;
     padding-top: 3px !important;
+    /*appearance: listbox !important;*/
+    -webkit-appearance: listbox !important;
+    -moz-appearance: listbox !important;
+    -o-appearance: listbox !important;
+    -ms-appearance: listbox !important;
 }
 #content .content-in .header select.small {
-    padding-top: 1px;
+    /*padding-top: 1px;*/
 }
 
 /* cart */
@@ -429,16 +430,17 @@
 }
 #content .content-in .rightcol .invoices .item-detail .left {
 	position: absolute;
-    width: 30%;
-    float: none;
     top: 0;
     bottom: 0;
-    padding: 2%;
     background-color: #e8e8e8;
 }
-#content .content-in .rightcol .invoices .item-detail .right {
-    padding: 2%;
-    width: 62%;
+
+#content .content-in .rightcol .invoices .item-detail .left p,
+#content .content-in .rightcol .invoices .item-detail .right .desc,
+#content .content-in .rightcol .invoices .item-detail .right table tr td,
+#content .content-in .rightcol .invoices .item-detail .right table tr th,
+#content .content-in .rightcol .invoices .item-detail .right table tr th.h2 {
+	font-size: 14px;
 }
 
 #content .content-in .rightcol input#login_password_md5 + input + .item {
@@ -809,7 +811,10 @@ form#form_login div.item a.forgotpassword,
     height: auto;
 }
 
-/* lightbox - pricing */
+/* lightbox - pricing step 1 */
+.lightbox .pricing .leftcol table {
+    font-size: 14px;
+}
 .lightbox .pricing .rightcol {
     width: 57%;
     font-size: 14px;
@@ -836,7 +841,6 @@ form#form_login div.item a.forgotpassword,
 }
 .lightbox .pricing .rightcol .item label {
 	width: auto;
-    float: left;
     background: none;
 }
 .lightbox .pricing .rightcol .item input {
@@ -871,25 +875,26 @@ form#form_login div.item a.forgotpassword,
 }
 .lightbox .pricing .rightcol .item.territories ul {
     height: 300px;
+    /*padding-top: 0;*/
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
 .lightbox .pricing .rightcol .item.territories ul li {
-    height: auto !important;
-    height: 30px !important;
+	height: auto !important;
+    padding: 5px 3px !important;
 }
 .lightbox .pricing .rightcol .item.territories ul li.separator {
     height: 1px !important;
+    padding: 3px !important;
 }
 .lightbox .pricing .rightcol .item.territories ul label {
    margin: 0 0 0 8px !important;
-   height: 24px;
-   line-height: 24px;
+   line-height: 1;
    background: none;
 }
 .lightbox .pricing .rightcol .item.territories input {
-    height: 24px !important;
+    line-height: 1;
     margin: 0;
     padding: 0 !important;
 }
